css radio-button-group display: inline;

--- a/docs/1/css/radio-button.css
+++ b/docs/1/css/radio-button.css
@@ -40,6 +40,7 @@ input[type="radio"] + label[disabled] {
 ul.radio-button-group {
     margin: 0;
     padding: 0;
+    display: inline;
 }
 ul.radio-button-group li{
     margin: 0;
